Fix quiz overflow in mobile screens

--- a/docs/site/src/css/custom.css
+++ b/docs/site/src/css/custom.css
@@ -426,7 +426,7 @@ h4 {
 
 /** Globals **/
 .button{
-  text-wrap: pretty;
+  text-wrap: wrap;
   color: var(--iota-white);
   background: var(--iota-hero-dark);
 }
